@@ -1,85 +1,120 @@
 # 🎲 Snakes & Ladders - JavaFX Pixel Edition
 
-> A vibrant, nostalgic pixel-style remake of the classic **Snakes and Ladders** game using JavaFX, featuring smooth animations, a login system, and hidden Easter eggs.
+> A nostalgic pixel-style implementation of the classic **Snakes and Ladders** game using JavaFX. Featuring animated tokens, a login/register system, and hidden Easter eggs!
 
 ---
 
 ## 📦 Features
 
-- 🎮 **Turn-based gameplay** for one or two players
-- 🧩 **Pixel-art UI** with colorful grid and retro design
-- 🧑‍💻 **Login & Register system** (with `UserManager.java`)
-- 🎲 **Dice roll animation** and per-step token jumping (`TokenAnimator`)
-- 🐍 **Snakes and ladders** visually span across multiple tiles
-- 🎉 **Winning confetti animation** using a custom `ConfettiPane`
-- 🌌 **Easter egg**: if a player lands on a snake head and waits 10s, a "42" image fades in; mode screen background then becomes galaxy-themed
+- 🎮 Turn-based 1P/2P gameplay with animated per-step token jumps
+- 🧑‍💻 Login & Register system with basic user management
+- 🎲 Dice roll animations with alternating turn display
+- 🐍 Snakes and ladders visually span across tiles with pixel art assets
+- 🌠 Easter egg: a “42” appears if dice is not clicked within 10s on a snake head
+- 🎉 Victory triggers a custom confetti animation pane
 
 ---
 
 ## 🗂️ Project Structure
 
-| File | Purpose |
-|------|---------|
+| File | Description |
+|------|-------------|
 | `Main.java` | Entry point |
-| `GameBoardGUI.java` | Main game UI and board logic |
-| `Gameengine.java` | Game state, player turn, snake/ladder logic |
-| `PlayerToken.java` | Token display and positioning |
-| `TokenAnimator.java` | Handles per-cell token movement animation |
-| `ConfettiPane.java` | Confetti celebration pane |
-| `LoginScene.java`, `RegisterScene.java`, `SignInScene.java` | UI for account management |
-| `ModeSelectScene.java` | Game mode selection |
-| `UserManager.java` | Handles registration/login records |
-| `LogoScene.java` | Logo entrance screen |
+| `GameBoardGUI.java` | Core board UI and dice/token display |
+| `Gameengine.java` | Player movement and game logic |
+| `TokenAnimator.java` | Handles per-cell movement animation |
+| `PlayerToken.java` | Player token image + coordinates |
+| `LoginScene.java`, `RegisterScene.java`, `SignInScene.java` | Login & Register scenes |
+| `ModeSelectScene.java` | Game mode selection UI |
+| `ConfettiPane.java` | Confetti visual on win |
+| `UserManager.java` | Handles username-password logic |
+| `LogoScene.java` | Splash screen with logo |
 
 ---
 
-## 🎨 Image Assets
+## 🎨 Assets Overview
 
-| Filename | Usage |
-|----------|-------|
-| `board.png` | Main board with numbers and colors |
+> All images are located in: `resources/assets/`
+
+| File | Purpose |
+|------|--------|
+| `board.png` | Main game board |
 | `pieceRed.png` | Red player token |
-| `snake3.png` | Purple snake art |
-| `easter.png` | "42" hidden Easter egg image |
-| `logo.png` | Game logo on startup screen |
-| `mode_bg.png` | Background of mode select screen |
-| `login_bg.png` | Background for login/register pages |
-| `option_background.png` | Option/restart UI window |
+| `snake3.png` | Snake art |
+| `logo.png` | Logo screen |
+| `easter.png` | Hidden 42 image |
+| `mode_bg.png` | Mode select background |
+| `login_bg.png` | Login/register background |
+| `option_background.png` | Option window frame |
+
+> ⚠️ Assets are loaded using `getClass().getResource("/assets/filename")`, so folder structure **must be preserved**.
 
 ---
 
-## 🪄 Easter Egg: The Meaning of Life
+## 🪄 Easter Egg - “The Answer to Everything”
 
-When a player lands on a snake's head and does not roll the dice for **10 seconds**, the number **“42”** (a tribute to *The Hitchhiker’s Guide to the Galaxy*) will fade in. After returning to the mode select screen, its background changes to a **cosmic galaxy theme**.
+If a player lands on a snake's head and doesn't click the dice for 10 seconds:
+- A **“42”** image fades in
+- Upon returning to the mode select screen, background becomes **galaxy-themed**
 
 ---
 
 ## 🛠 How to Run
 
-1. Install **Java 11+** and ensure **JavaFX** is properly set up in your IDE.
-2. Clone or download this repo.
-3. Open the project in **IntelliJ IDEA** or **VS Code**.
-4. Run `Main.java`.
+### ☕ Requirements
+
+- Java **11 or higher** (tested with Java 17)
+- JavaFX SDK **17 or later**
 
 ---
 
+### 🚀 IntelliJ IDEA Setup
 
-## ✨ Future Ideas
+1. Open the project in IntelliJ.
+2. Go to:  
+   `File → Project Structure → Libraries → + → Java`  
+   and select your JavaFX SDK folder (`lib` directory).
+3. In **Run/Debug Configurations** for `Main.java`, add VM options:
 
-- Add sound effects and BGM with mute toggle
-- Network multiplayer
-- Single-player mode with AI
-- Snake/ladder editor or random generator
+```bash
+--module-path /path/to/javafx-sdk-17/lib --add-modules javafx.controls,javafx.fxml
+Replace /path/to/javafx-sdk-17/ with your actual SDK path.
+```
 
----
+### 💻 VS Code Setup
 
-## 👨‍💻 Authors
+Install the Java Extension Pack from Microsoft.
 
-Developed by:
+Create a .vscode/launch.json with the following:
 
-- **Rand (Pengyu LI)**  
-- **Yunqi ZHONG**
+{
+  "type": "java",
+  "name": "Launch Game",
+  "request": "launch",
+  "mainClass": "gui.Main",
+  "vmArgs": "--module-path /path/to/javafx-sdk-17/lib --add-modules javafx.controls,javafx.fxml"
+}
+Replace the --module-path with your JavaFX SDK path.
 
-Proudly created as part of the Snakes and Ladders JavaFX project at SUSTech.
+### 📸 Screenshots
 
----
+(Add image previews if hosted online or in your repo)
+
+### ✨ Possible Future Features
+
+Add sound effects and background music with mute toggle
+
+Single player mode vs AI
+
+Online multiplayer support
+
+Custom board or level editor
+
+### 👨‍💻 Authors
+
+**Rand (Pengyu LI)**
+
+**Yunqi ZHONG**
+
+**Built at Southern University of Science and Technology (SUSTech) as part of a Java GUI course project.**
+
